# audrey-hopburn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile.notebooks  Dockerfile.test  MANIFEST.in  README.md  makefile  mypy.ini  setup.cfg
.github/: checks.sh
.github/workflows/: checks.yml
tests/: test_dummy.py
