[metadata]
name = audrey_hopburn
version = attr: audrey_hopburn.__version__
author = eugenekanasheuski
description = audrey_hopburn
long_description = file: README.md

[options]
packages = audrey_hopburn
include_package_data = True
install_requires =
    pip==23.3.1
    pandas
    numpy

[options.package_data]
* = data/*.csv

[options.extras_require]
test =
    pytest==7.1.2
    black==22.3.0
    flake8==4.0.1
    pytest-html
    zest.releaser
    click==8.0.1
    coverage
    genbadge[all]
    darglint==1.8.1
    pydocstyle==6.1.1
    pre-commit==2.19.0
    mypy==0.982
notebooks =
    ipykernel==6.26.0
    jupyter==1.0.0

[zest.releaser]
python-file-with-version = audrey_hopburn/__init__.py

[flake8]
max-line-length = 88
extend-ignore = E203
docstring-style = sphinx